# spirit-anime

./: .gitignore  README.md  app.py  app_test.py  example.json  pyproject.toml  requirements.txt
doc/spirit_anime/: get.md  put.md
doc/spirit_anime_detail/: delete.md  get.md  post.md
external_apis/anime/: character.py  quote.py
external_apis/food/: foodish.py
src/apps/: app.py
src/utils/: validator.py
tests/: conftest.py  test_app.py
utils/: random_num.py  storage.py
